--- a/main.tex
+++ b/main.tex
@@ -226,6 +226,12 @@ Maka kamu harus sanggup menahan perihnya Kebodohan.'
 \chapter{Praktek Library CSV dan Pandas}
 \input{chapters/Praktek/4}
 
+\chapter{Library CSV dan Pandas}
+\input{chapters/Teori/5}
+%PRAKTEK
+\chapter{Praktek Library CSV dan Pandas}
+\input{chapters/Praktek/5}
+
 \bibliographystyle{IEEEtran}
 %\def\bibfont{\normalsize}
 \bibliography{references}
