--- a/main.tex
+++ b/main.tex
@@ -232,6 +232,12 @@ Maka kamu harus sanggup menahan perihnya Kebodohan.'
 \chapter{Praktek Library CSV dan Pandas}
 \input{chapters/Praktek/5}
 
+\chapter{Library CSV dan Pandas}
+\input{chapters/Teori/6}
+%PRAKTEK
+\chapter{Praktek Library CSV dan Pandas}
+\input{chapters/Praktek/6}
+
 \bibliographystyle{IEEEtran}
 %\def\bibfont{\normalsize}
 \bibliography{references}
